# swarm-robotics-in-disaster-scenarios

./: README.md
src/my_robot/: CMakeLists.txt  package.xml  setup.py
src/my_robot/config/: robot1_controllers.yaml  robot2_controllers.yaml  robot3_controllers.yaml
src/my_robot/launch/: simulation.launch.py  swarm_collision.launch.py  swarm_leader_follower.launch.py
src/my_robot/msg/: SwarmPosition.msg
src/my_robot/my_robot/: circular_formation.py  controller.py  leader_follower.py  obstacle_avoidance.py  obstacle_avoidance_swarm.py  position_publisher.py  swarm_controller.py  target_detection.py
src/my_robot/src/: robot_spawner.py
src/my_robot/urdf/: my_robot.xacro  robot1.urdf  robot2.urdf  robot3.urdf  robot4.urdf  robot5.urdf  robot6.urdf  robot7.urdf
src/my_robot/worlds/: realistic_rescue.sdf  simple_rescue.world
